0.04

0.03 2023-04-13T09:23:14+02:00
 - First version - move from Wikibase::Cache distribution