@@ -1,4 +1,5 @@
 0.04
+ - Update Module::Install to 1.21 version.
 
 0.03 2023-04-13T09:23:14+02:00
  - First version - move from Wikibase::Cache distribution
